--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- CTA Button -->
         <div class="mt-10">
             <a href="#" class="inline-block text-white font-medium text-[15px] px-6 py-2.5 rounded-lg transition-colors shadow-sm" style="background-color: #2563eb">
-                Book a Demo
+                i liek this
             </a>
         </div>
 
